# fastapi-hotwire

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  release.yml
examples/flash/: README.md  app.py
examples/flash/templates/: index.html
examples/minimal/: README.md  app.py
examples/minimal/templates/: index.html
fastapi_hotwire/: __init__.py  blocks.py  csrf.py  deps.py  flash.py  forms.py  protocols.py  responses.py  streams.py  templates.py  testing.py
tests/: test_blocks.py  test_csrf.py  test_deps.py  test_flash.py  test_forms.py  test_responses.py  test_streams.py  test_templates.py  test_testing.py
