[project]
name = "fastapi-hotwire"
version = "0.0.0"
description = "Hotwire (Turbo) integration for FastAPI — turbo-stream responses, frame detection, block rendering, flash, and test helpers."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Dane Thurber" }]
keywords = [
    "fastapi",
    "hotwire",
    "turbo",
    "stimulus",
    "jinja2",
    "html",
    "server-rendered",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-sugar>=1.0",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/danethurber/fastapi-hotwire"
Source = "https://github.com/danethurber/fastapi-hotwire"
Issues = "https://github.com/danethurber/fastapi-hotwire/issues"
Changelog = "https://github.com/danethurber/fastapi-hotwire/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_hotwire"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ty.environment]
python-version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers"
